// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module: pending export: removePending When testObject is either pending or lagging When in lagging Should remove test from lagging 1`] = `
Object {
  "doneCallbacks": Array [],
  "fieldCallbacks": Object {},
  "groups": Object {},
  "id": "4",
  "lagging": Array [],
  "name": "suite_name",
  "pending": Array [],
  "testObjects": Array [],
  "tests": Object {},
}
`;

exports[`module: pending export: removePending When testObject is either pending or lagging When in pending Should remove test from pending 1`] = `
Object {
  "doneCallbacks": Array [],
  "fieldCallbacks": Object {},
  "groups": Object {},
  "id": "2",
  "lagging": Array [],
  "name": "suite_name",
  "pending": Array [],
  "testObjects": Array [],
  "tests": Object {},
}
`;

exports[`module: pending export: setPending When a field of the same profile is in lagging array Should remove test from lagging array 1`] = `
Object {
  "doneCallbacks": Array [],
  "fieldCallbacks": Object {},
  "groups": Object {},
  "id": "13",
  "lagging": Array [
    VestTest {
      "failed": false,
      "fieldName": "test_2",
      "id": "17",
      "isWarning": false,
      "statement": "Some statement string",
      "testFn": [MockFunction],
    },
    VestTest {
      "failed": false,
      "fieldName": "test_1",
      "id": "16",
      "isWarning": false,
      "statement": "Some statement string",
      "testFn": [MockFunction],
    },
  ],
  "name": "suite_name",
  "pending": Array [
    VestTest {
      "failed": false,
      "fieldName": "test_0",
      "groupName": "group_name",
      "id": "15",
      "isWarning": false,
      "statement": "Some statement string",
      "testFn": [MockFunction],
    },
  ],
  "testObjects": Array [],
  "tests": Object {},
}
`;
